data/forge_javadoc/1.7.10/raw/net/minecraft/client/gui/achievement/GuiAchievements.md
---
title: "GuiAchievements"
description: "public class GuiAchievements extends GuiScreen implements IProgressMeter"
package: "net/minecraft/client/gui/achievement"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/gui/achievement/GuiAchievements.html"
sourceType: javadoc
---

# GuiAchievements

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.achievement.GuiAchievements

## Class signature

```java
public class GuiAchievements extends GuiScreen implements IProgressMeter
```

## Constructors

- `GuiAchievements(GuiScreen p_i45026_1_, StatFileWriter p_i45026_2_)`

## Methods

- `protected void actionPerformed(GuiButton p_146284_1_)`
- `boolean doesGuiPauseGame()`
- `void drawScreen(int p_73863_1_, int p_73863_2_, float p_73863_3_)`
- `void func_146509_g()`
- `protected void func_146552_b(int p_146552_1_, int p_146552_2_, float p_146552_3_)`
- `protected void func_146553_h()`
- `void initGui()`
- `protected void keyTyped(char p_73869_1_, int p_73869_2_)`
- `void updateScreen()`

## Fields

- `protected int field_146555_f`
- `protected int field_146557_g`
- `protected GuiScreen field_146562_a`
- `protected int field_146563_h`
- `protected int field_146564_i`
- `protected double field_146565_w`
- `protected double field_146566_v`
- `protected double field_146567_u`
- `protected double field_146568_t`
- `protected double field_146569_s`
- `protected float field_146570_r`
- `protected double field_146573_x`
